styled header  with background image and clip path. also added 30px padding to the body

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,13 @@
 
+/*
+COLORS:
+
+Light green: #7ed56f
+Medium green: #55c57a
+Dark green: #28b485
+
+*/
+
 /* ================universal reset so each browser can render the page the exact same way====================== */
 * {
     margin: 0;
@@ -12,6 +21,15 @@ body {
     font-size: 16px;
     line-height: 1.7;
     color: #777;
+    padding: 30px;
 }
 /*===============================================end of basic reset============================================ */
 
+.header{
+    height: 95vh;
+    background-image: linear-gradient(to right bottom, rgb(126, 213, 111, 0.8),rgba(40, 180, 131, 0.8)) ,url(../images/hero.jpg);
+    background-size: cover;
+    background-position: top;
+    clip-path: polygon(0 0, 100% 0, 100% 75vh,0 100% )
+    
+}
