--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body {
     padding: 30px;
 }
 /*===============================================end of basic reset============================================ */
-
+/* =====================Header========================= */
 .header{
     height: 95vh;
     background-image: linear-gradient(to right bottom, rgb(126, 213, 111, 0.8),rgba(40, 180, 131, 0.8)) ,url(../images/hero.jpg);
