--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ Dark green: #28b485
 
 */
 
-/* ================universal reset so each browser can render the page the exact same way====================== */
+/*======universal reset so each browser can render the page the exact same way============= */
 * {
     margin: 0;
     padding: 0;
@@ -23,13 +23,87 @@ body {
     color: #777;
     padding: 30px;
 }
-/*===============================================end of basic reset============================================ */
-/* =====================Header========================= */
+/*==============================end of basic reset ======================================= */
+
+/* ===================================Header ============================================= */
 .header{
     height: 95vh;
     background-image: linear-gradient(to right bottom, rgb(126, 213, 111, 0.8),rgba(40, 180, 131, 0.8)) ,url(../images/hero.jpg);
     background-size: cover;
     background-position: top;
-    clip-path: polygon(0 0, 100% 0, 100% 75vh,0 100% )
+    clip-path: polygon(0 0, 100% 0, 100% 75vh,0 100% );
+    position: relative;
     
 }
+/*============= header logo ======================== */
+.logo-box{
+    position: absolute;
+    top: 40px;
+    left: 40px;
+}
+
+.logo {
+height: 35px;
+}
+/*======== end of header logo ==================== */
+
+/*========= main/sub header ======================= */
+
+.text-box{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.heading-primary{
+    color: #fff;
+    text-transform: uppercase;
+    backface-visibility: hidden;
+}
+.heading-primary-main{
+    display: block;
+    font-size: 60px;
+    font-weight: 400;
+    letter-spacing: 35px;
+    animation-name: moveInLeft;
+    animation-duration: 1s;
+    animation-timing-function: ease-out;
+}
+.heading-primary-sub {
+    display: block;
+    font-size: 20px;
+    font-weight: 700px;
+    letter-spacing: 17.4px;
+    animation: moveInRight 1s ease-out
+}
+/*===========main/sub heading animations ========== */
+@keyframes moveInLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+    80% {
+        transform: translateX(10px);
+    }
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+@keyframes moveInRight {
+    0% {
+        opacity: 0;
+        transform: translateX(100px);
+    }
+    80% {
+        transform: translateX(-10px);
+    }
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+/*==========main/sub heading animations =========== */
+
+/*========== end of main/sub header =============== */
