constructed button and added css animations to button

--- a/css/style.css
+++ b/css/style.css
@@ -47,19 +47,21 @@ height: 35px;
 }
 /*======== end of header logo ==================== */
 
-/*========= main/sub header ======================= */
+/*============================= main/sub header ======================= */
 
 .text-box{
     position: absolute;
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
+    text-align: center;
 }
 
 .heading-primary{
     color: #fff;
     text-transform: uppercase;
     backface-visibility: hidden;
+    margin-bottom: 60px;
 }
 .heading-primary-main{
     display: block;
@@ -104,6 +106,75 @@ height: 35px;
         transform: translate(0);
     }
 }
-/*==========main/sub heading animations =========== */
+@keyframes moveInBottom {
+    0% {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+    
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+/*========== end of main/sub heading animations =========== */
 
-/*========== end of main/sub header =============== */
+/*=============================== end of main/sub header ======================= */
+
+/* =============header animated button ==================== */
+.btn:link,
+.btn:visited {
+    text-transform: uppercase;
+    text-decoration:none;
+    padding: 15px 40px;
+    display: inline-block; 
+    border-radius: 100px;
+    transition: all .2s;
+    position: relative;
+}
+
+.btn:hover{
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0,0,0, .3);
+}
+
+.btn:active {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 15px rgba(0,0,0, .3);
+
+}
+
+.btn-white {
+    background-color: #fff;
+    color: #777;
+    
+}
+.btn::after {
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all .4s;
+}
+
+.btn-white::after {
+    background-color: #fff;
+}
+.btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0;
+
+}
+/* animation fill mode automatically applies the styles up to zero percent before the animations starts */
+.btn-animated {
+    animation:moveInBottom .5s ease-out .75s;
+    animation-fill-mode: backwards;
+}
+
+
+/* ============= end of header animated button ==================== */
