--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,7 @@ html {
   font-size: 62.5%; }
 
 body {
-  font-family: "Lato", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.7;
-  color: #777;
-  padding: 30px; }
+  box-sizing: border-box; }
 
 /*==============================end of basic reset ======================================= */
 /*=================== animations ================= */
@@ -48,27 +43,6 @@ body {
     transform: translate(0); } }
 
 /*========== end of animations ================= */
-/* ===================================Header ============================================= */
-.header {
-  height: 95vh;
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../images/hero.jpg);
-  background-size: cover;
-  background-position: top;
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-  position: relative; }
-  .header__logo-box {
-    position: absolute;
-    top: 40px;
-    left: 40px; }
-  .header__logo {
-    height: 35px; }
-  .header__text-box {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center; }
-
 .heading-primary {
   color: #fff;
   text-transform: uppercase;
@@ -89,7 +63,14 @@ body {
     letter-spacing: 17.4px;
     animation: moveInRight 1s ease-out; }
 
-/* =============header animated button ==================== */
+body {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.7;
+  color: #777;
+  padding: 30px; }
+
 .btn {
   /* animation fill mode automatically applies the styles up to zero percent before the animations starts */ }
   .btn:link, .btn:visited {
@@ -129,4 +110,23 @@ body {
     animation: moveInBottom .5s ease-out .75s;
     animation-fill-mode: backwards; }
 
-/* ============= end of header animated button ==================== */
+/* ===================================Header ============================================= */
+.header {
+  height: 95vh;
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../images/hero.jpg);
+  background-size: cover;
+  background-position: top;
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+  position: relative; }
+  .header__logo-box {
+    position: absolute;
+    top: 40px;
+    left: 40px; }
+  .header__logo {
+    height: 35px; }
+  .header__text-box {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center; }
