--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -9,14 +9,10 @@
 }
 
 html {
+    // defines what 1rem is
     font-size: 62.5%;
 }
 body {
-    font-family: "Lato", sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.7;
-    color:$color-grey-dark;
-    padding: 30px;
+    box-sizing: border-box;
 }
 /*==============================end of basic reset ======================================= */
