--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -29,3 +29,20 @@ body {
     color:$color-grey-dark;
     padding: 30px;
 }
+
+.heading-secondary {
+    font-size: 3.5rem;
+    text-transform: uppercase;
+    font-weight: 700;   
+    background-image: linear-gradient(to right,$color-primary-light, $color-primary-dark);
+    display: inline-block;
+    -webkit-background-clip: text;
+    color: transparent;
+    letter-spacing: 2px;
+    transition: all .2s;
+    
+    &:hover {
+        transform: skewY(3deg) skewX(15deg) scale(1.1);
+        text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
+    }
+}
