--- a/pages/_home.scss
+++ b/pages/_home.scss
@@ -17,3 +17,12 @@
 
     }
 }
+
+.section-tours {
+    background-color: $color-grey-light-1;
+    padding: 25rem 0;
+    margin-top: -10rem;
+    padding: 25 rem 0 50rem 0;
+
+
+}
