--- a/components/_card.scss
+++ b/components/_card.scss
@@ -29,6 +29,12 @@
             &-1 {
                 background-image: linear-gradient(to right bottom, $color-secondary-light,$color-secondary-dark);
             }
+            &-2 {
+                background-image: linear-gradient(to right bottom, $color-primary-light,$color-primary-dark);
+            }
+            &-3 {
+                background-image: linear-gradient(to right bottom, $color-tertiary-light,$color-tertiary-dark);
+            }
         }
         
     }
@@ -41,22 +47,25 @@
         transform: rotateY(0);
     }
 
-    // Front side styling
+    // Front side styling===========================================================
     &__picture {
         background-size: cover;
         height: 23rem;
         background-blend-mode: screen;
         -webkit-clip-path:polygon(0 0,100% 0,100% 85%, 0 100%);
         clip-path: polygon(0 0,100% 0,100% 85%, 0 100%);
+        border-top-left-radius: 3px;
+        border-top-right-radius: 3px;
+
 
         &--1 {
             background-image: linear-gradient(to right bottom, $color-secondary-light,$color-secondary-dark), url(../images/nat-5.jpg);
         }
         &--2 {
-            background-image: url(../images/nat-5.jpg);
+            background-image:  linear-gradient(to right bottom, $color-primary-light,$color-primary-dark),url(../images/nat-6.jpg);
         }
         &--3 {
-            background-image: url(../images/nat-5.jpg);
+            background-image:  linear-gradient(to right bottom, $color-tertiary-light,$color-tertiary-dark),url(../images/nat-7.jpg);
         }
     }
 
@@ -82,6 +91,19 @@
             rgba($color-secondary-light, .85),
             rgba($color-secondary-dark, .85));
         }
+
+        &--2 {
+            background-image: linear-gradient(to right bottom, 
+            rgba($color-primary-light, .85),
+            rgba($color-primary-dark, .85));
+        }
+
+        &--3 {
+            background-image: linear-gradient(to right bottom, 
+            rgba($color-tertiary-light, .85),
+            rgba($color-tertiary-dark, .85));
+
+        }
     }
 
     &__details {
@@ -103,4 +125,30 @@
         }
     }
 
+    // Backside styling=============================================================
+
+    &__cta {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 90%;
+        text-align: center;
+    }
+
+    &__price-box {
+        text-align: center;
+        margin-bottom: 8rem;
+        color: $color-white;
+    }
+
+    &__price-only {
+        font-size: 1.4rem;
+        text-transform: uppercase;
+    }
+
+    &__price-value {
+        font-size: 6rem;
+        font-weight: 100;
+    }
 }
