--- a/css/style.css
+++ b/css/style.css
@@ -536,6 +536,19 @@ u-margin-top-huge {
     width: 80%;
     float: right; }
 
+.navigation__checkbox {
+  display: none; }
+
+.navigation__button {
+  background-color: #fff;
+  height: 7rem;
+  width: 7rem;
+  position: fixed;
+  top: 6rem;
+  right: 6rem;
+  border-radius: 50%;
+  z-index: 2000; }
+
 .navigation__background {
   height: 6rem;
   width: 6rem;
